--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ header {
     position: fixed;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.8);
+    z-index: 1;
 }
 
 #space {
@@ -46,6 +47,7 @@ ul {
     list-style: none;
     padding: 0;
     margin: 0;
+    z-index: 1;
 }
 
 a {
@@ -59,11 +61,11 @@ a {
     width: var(--w);
     height: 2rem;
     padding: 0.2rem 0;
+    padding: 0 1rem 0;
 }
 
 #logo {
     float: left;
-    display: block;
     height: 100%;
     width: auto;
 }
