--- a/style.css
+++ b/style.css
@@ -19,6 +19,18 @@ body {
     margin: 0;
 }
 
+body::after {
+    content: "";
+    position: absolute;
+    top: 30rem;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(to bottom, black, transparent 30%), url("https://www.transparenttextures.com/patterns/stardust.png");
+    background-size: 20%;
+    z-index: -1;
+}
+
 header {
     position: fixed;
     width: 100%;
@@ -73,7 +85,7 @@ a {
     height: 2rem;
 }
 
-#logo {
+#header-img {
     float: left;
     height: 100%;
     width: auto;
@@ -169,19 +181,28 @@ a {
 
 /* BENEFITS */
 
+#benefits {
+    margin-top: 3rem;
+    margin-left: 1rem;
+}
+
+.benefits-item {
+    margin-bottom: 1rem;
+}
+
 .big {
-    font-size: 1.7rem;
+    font-size: 2.2rem;
     font-weight: 600;
     color: #FFCC00;
-    line-height: 1.7rem;
+    line-height: 2.2rem;
     margin: 0;
 }
 
 .small {
-    font-size: 0.8rem;
+    font-size: 1rem;
     color: #D2FAFF;
-    line-height: 0.8rem;
-    margin: 0 0 0.5rem;
+    line-height: 0.5rem;
+    margin: 0 0 0.5rem 0.1rem;
 }
 
 /* FORM */
