--- a/style.css
+++ b/style.css
@@ -182,13 +182,20 @@ a {
 /* BENEFITS */
 
 #benefits {
-    margin-top: 3rem;
-    margin-left: 1rem;
+    margin: 4rem 0 0 4rem;
+    float: left;
+    padding: 0.5rem;
+    border-radius: 0.4rem;
+    background-color: rgba(0, 0, 0, 0.3);
 }
 
 .benefits-item {
     margin-bottom: 1rem;
 }
+
+            .benefits-item:nth-child(3) {
+                margin-bottom: 0;
+            }
 
 .big {
     font-size: 2.2rem;
@@ -207,6 +214,26 @@ a {
 
 /* FORM */
 
+#form {
+    margin: 4rem 0 2rem;
+    width: 50%;
+    float: right;
+    padding: 0.5rem;
+    border-radius: 0.4rem;
+    background-color: rgba(255, 0, 0, 0.3);
+}
 
+.fgroup {
+    font-family: 'Rajdhani', sans-serif;
+    margin: 0 0 0.5rem;
+}
+
+            .fgroup:nth-child(5) {
+                margin-bottom: 0;
+            }
+
+#name-label, #email-label, legend {
+    color: #FFCC00;
+}
 
 /* FOOTER */
