--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body::after {
     left: 0;
     right: 0;
     bottom: 0;
-    background: linear-gradient(to bottom, black, transparent 30%), url("https://www.transparenttextures.com/patterns/stardust.png");
+    background: linear-gradient(to bottom, black, transparent 20%), url("https://www.transparenttextures.com/patterns/stardust.png");
     background-size: 20%;
     z-index: -1;
 }
@@ -34,16 +34,25 @@ body::after {
 header {
     position: fixed;
     width: 100%;
+    height: 2rem;
     background-color: rgba(0, 0, 0, 0.8);
     z-index: 1;
 }
 
 #space {
-    width: var(--w);
+    width: 100%;
     height: 2rem;
 }
 
 main {
+    display: grid;
+    grid-template-areas:
+    "banner banner"
+    "benefits benefits"
+    "ships form"
+    "video video"
+    "testimonials testimonials";
+    grid-template-columns: 1fr 1fr;
     position: relative;
     width: var(--w);
     margin: auto;
@@ -96,23 +105,26 @@ a {
     float: right;
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
+    gap: 1rem;
     line-height: 2rem;
     margin-right: 1rem;
-}
-
-.nav-link {
-    margin: 0 0 0 4rem;  
 }
 
 /* BANNER */
 
     /* TITLE + SUBTITLE */
 
+#banner {
+    grid-area: banner;
+    position: relative;
+    margin: 1rem 0;
+    width: 100%;
+}
+
 #titlebox {
     position: relative;
     display: inline-block;
-    margin: 1rem 0;
 }
 
 #title-1, #title-2 {
@@ -166,8 +178,7 @@ a {
 
 #ship {
     position: absolute;
-    margin: 2rem 0;
-    width: 60%;
+    width: 55%;
     height: auto;
     right: -40rem;
     animation: shipmove 2s cubic-bezier(0,.8,.1,1) forwards;
@@ -176,7 +187,7 @@ a {
 }
             @keyframes shipmove {
                 from {right: -40rem;}
-                to {right: -5rem;}
+                to {right: -2rem;}
             }
 
 /* GLOBAL FADEIN */
@@ -190,15 +201,16 @@ a {
 /* BENEFITS */
 
 #benefits {
+    grid-area: benefits;
     display: flex;
-    border: solid lime;
-    width: 60%;
-    position: relative;
-    margin: 4rem 2rem 0;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: top;
+    justify-content: space-evenly;
+    margin-top: 2%;
 }
 
 #benefits-list {
-    max-width: 40%;
     padding: 0.5rem;
     border-radius: 0.4rem;
     background-color: rgba(0, 0, 0, 0.3);
@@ -227,22 +239,62 @@ a {
 }
 
 #signup-now {
-    max-width: 40%;
-    height: 15rem;
+    height: 12rem;
     padding: 0.5rem;
     border-radius: 0.4rem;
     background-color: rgba(0, 0, 0, 0.3);
 }
 
+/* SHIPS */
+
+#ships {
+    border: solid lime;
+    grid-area: ships;
+    justify-self: center;
+    width: 60%;
+    float: left;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin: 1rem 1.5rem 0 0;
+    padding: 0;
+}
+
+.ships {
+    background-color: #d2faffab;
+    width: 100%;
+    margin: 0 0 1rem;
+    padding: 0;
+    border-radius: 0.3rem;
+    text-align: center;
+    color: black;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+            .ships:nth-child(3) {
+                margin: 0;
+            }
+
+.ships figure {
+    border: solid red;
+    margin: 0;
+    padding: 0.2rem;
+}
+
+.ships figure img {
+    border: solid blue;
+    width: 90%;
+}
+
 /* FORM */
 
 #form {
-    margin: 4rem 0 2rem;
-    width: 50%;
-    float: right;
+    margin-top: 1rem;
+    grid-area: form;
+    display: inline-block;
     padding: 0 0.5rem 0.5rem;
     border-radius: 0.4rem;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(116, 3, 3, 0.3);
 }
 
 label {
@@ -256,7 +308,7 @@ label {
     font-size: 1.5rem;
     text-align: center;
     width: 100%;
-    margin: 0 0 1rem;
+    margin: 0;
     padding: 0;
     color: #FFCC00;
     font-weight: 600;
@@ -282,8 +334,11 @@ label {
             }
 
 .fcontrol {
+    display: block;
     height: 1rem;
+    width: 100%;
     border-radius: 0.2rem;
+    font-size: 0.7rem;
 }
 
 legend {
@@ -332,4 +387,29 @@ input[type=checkbox].checkbox {
 @keyframes fadein {
     from {opacity: 0;}
     to {opacity: 1;}
+}
+
+/* GLOBAL MEDIA QUERIES */
+@media (max-width: 1600px) {
+    #space {
+        height: 1rem;
+    }
+}
+@media (max-width: 1300px) {
+    #space {height: 3rem;}
+    #role-types {grid-template-columns: repeat(2, 1fr);}
+}
+
+@media (max-width: 1000px) {
+    #space {height: 2rem;}
+    #role-types {grid-template-columns: repeat(3, 1fr);}
+    main {
+        grid-template-areas:
+        "banner banner"
+        "benefits benefits"
+        "ships ships"
+        "form form"
+        "video video"
+        "testimonials testimonials";
+    }
 }
