--- a/style.css
+++ b/style.css
@@ -248,7 +248,6 @@ a {
 /* SHIPS */
 
 #ships {
-    border: solid lime;
     grid-area: ships;
     justify-self: center;
     width: 60%;
@@ -256,16 +255,21 @@ a {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    margin: 1rem 1.5rem 0 0;
-    padding: 0;
+    margin: 1rem 1.5rem 0 1rem;
 }
 
 .ships {
-    background-color: #d2faffab;
+    background-color: #d2faff6c;
+    box-shadow:
+              0 0 0.05rem #ffea95,
+        inset 0 0 0.05rem #ffea95,
+              0 0 0.1rem 0.05rem #FFCC00,
+        inset 0 0 0.1rem 0.05rem #FFCC00,
+        inset 0 0 0.2rem 0.05rem #000000;
     width: 100%;
     margin: 0 0 1rem;
-    padding: 0;
-    border-radius: 0.3rem;
+    padding: 0.4rem;
+    border-radius: 0.4rem;
     text-align: center;
     color: black;
     font-size: 1.5rem;
@@ -276,13 +280,11 @@ a {
             }
 
 .ships figure {
-    border: solid red;
     margin: 0;
-    padding: 0.2rem;
+    background: url(Images/vultureblk.png) 0.8rem 0.1rem/90% no-repeat;
 }
 
 .ships figure img {
-    border: solid blue;
     width: 90%;
 }
 
