--- a/style.css
+++ b/style.css
@@ -132,6 +132,7 @@ a {
     padding: 0;
     font-weight: 600;
     color: white;
+    text-shadow: 0 0 0.4rem black, 0 0 0.6rem black, 0 0 0.8rem black, 0 0 1rem black;
 }
 
 #title-1 {
@@ -166,6 +167,7 @@ a {
     font-size: 1.28rem;
     font-weight: 400;
     color: #d2faff;
+    text-shadow: 0 0 0.2rem black, 0 0 0.3rem black, 0 0 0.4rem black, 0 0 0.5rem black;
     animation: stmove 2s cubic-bezier(0,.8,.1,1) forwards;
     animation-delay: 500ms;
 }
@@ -456,6 +458,33 @@ input[type=checkbox].checkbox {
         --w: 90%;
     }
 
+    /* TITLES */
+    #title-1 {
+        font-size: 5rem;
+        line-height: 5rem;
+    }
+                @keyframes t1move {
+                    to {margin-left: -0.5rem;}
+                }
+    
+    #title-2 {
+        font-size: 6rem;
+        line-height: 4.5rem;
+    }
+                @keyframes t2move {
+                    to {margin-left: 0rem;}
+                }
+
+    #subtitle {
+        font-size: 1.54rem;
+        margin-top: -0.2rem;
+
+    }
+                @keyframes stmove {
+                    to {margin-left: 0.2rem;}
+                }
+
+    /* BENEFITS */
     .big {
         font-size: 4rem;
         line-height: 3.2rem;
@@ -471,6 +500,7 @@ input[type=checkbox].checkbox {
         margin: 0;
     }
 
+    /* SHIPS */
     #ships {
         display: flex;
         flex-direction: row;
