--- a/style.css
+++ b/style.css
@@ -383,7 +383,7 @@ legend {
                 transition: all 0.8s;
             }
             #terms a:hover {
-                color: #FFCC00;
+                color: #ffcc00;
                 text-decoration: underline;
                 transition: all 0.8s;
             }
@@ -431,7 +431,20 @@ input[type=checkbox].checkbox {
 }
 
 /* FOOTER */
+footer {
+    margin: -1rem auto 1rem;
+    width: var(--w);
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: silver;
+    font-size: 0.4rem;
+    text-align: center;
+    bottom: 0;
+}
 
+footer a{
+    color: rgb(255, 204, 0);
+}
 
 
 
