--- a/style.css
+++ b/style.css
@@ -61,8 +61,8 @@ main {
 
 footer {
     position: relative;
-    width: var(--w);
-    margin: auto;
+    width: 100%;
+    margin: -1rem auto 1rem;
 }
 
 .hidden {
@@ -432,12 +432,9 @@ input[type=checkbox].checkbox {
 
 /* FOOTER */
 footer {
-    margin: -1rem auto 1rem;
-    width: var(--w);
-    position: relative;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
     color: silver;
-    font-size: 0.4rem;
+    font-size: 0.6rem;
     text-align: center;
     bottom: 0;
 }
